机器人控制简化

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-
+  <button id="btn">这个是按钮</button>
+  <div id="canvas"></div>
 </body>
-<script src="./src/index.js"></script>
 </html>
